--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.swp
+*.egg-info/
+dist/
+build/
+
+# Виртуальное окружение
+venv/
 .env
+
+# Ботовые данные
+*.db
+*.sqlite3
+
+# Логи
+*.log
+
+# Игнорируем все картинки только если нужно, но в нашем случае мы хотим их добавить
+# Поэтому строки вроде:
+# *.jpg
+# images/
+# убираем или комментируем
+
+# Сохраняем другие медиа файлы, если нужно
